infra/k8s/ingress-srv.yaml
# Here we write some configurations to tell the ingress nginx controller how to handle incoming requests.
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.dev #(hostname -> this will work only in local machine) whatever hostname we write here we also need to edit our host file
      http:
        paths:
          - path: /api/users/?(.*) # whenever someone makes request to the cluster which have path /api/users/anything then we send that list to the backend as below
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port: 
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
